--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "useform-jps",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Custom Hook para manipular el estado y almacenar los valores de un formulario en react",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
